# etl-crash-pipeline

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
dags/: crash_dag.py
data/: Crash_Data.xlsx
src/: extract_data.py  load_data.py  transform_data.py
tests/: test_transform.py
