[project]
name = "etl-pipeline-crash"
version = "0.1.0"
description = "ETL pipeline for Australian road crash data with relational modeling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.3.0",
    "openpyxl>=3.1.5",            # lê arquivos excel .xlsx — o pandas usa por baixo
    "pandas>=3.0.2",             # manipulacao e transformacao de dados - DataFrames
    "psycopg2-binary>=2.9.11",   # driver postgreSQL — permite python falar com o banco
    "python-dotenv>=1.2.2",      # carrega variaveis de ambiente do arquivo .env
    "sqlalchemy>=2.0.49",        # ORM/engine de conexao — executa SQL e faz bulk insert
]

[dependency-groups]
dev = [
    "apache-airflow-core>=3.2.0", # so pro editor resolver imports — Airflow roda no Docker
]
